[tool.poetry]
name = "StreamDL"
version = "3.2.4"
description = "Monitor and Download Streams from a Variety of Websites"
authors = ["biodrone <biodrone@dangerous.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.62.1"
protobuf = "^4.25.3"
streamlink = "^6.7.2"
wheel = "^0.43.0"
yt-dlp = "^2024.4.9"

[tool.poetry.dev-dependencies]
pytest = "*"
bandit = "*"
black = "^24.3"
