[tool.uv]
dev-dependencies = ["pytest", "bandit", "black<25.0,>=24.3"]

[project]
authors = [{ name = "biodrone", email = "biodrone@dangerous.tech" }]
requires-python = "<4.0,>=3.10"
dependencies = [
  "grpcio<2.0.0,>=1.62.1",
  "protobuf<6.0.0,>=5.26.0",
  "streamlink>=7.1.3",
  "wheel<1.0.0,>=0.43.0",
  "yt-dlp>=2025.2.19",
]
name = "StreamDL"
version = "3.2.20"
description = "Monitor and Download Streams from a Variety of Websites"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
